added content to support ordered choices
