# server/src/endpoint_controllers/org_elections_controller.py
@@ -59,13 +59,14 @@ def add_questions(election_id, questions):
         question_description = question[QuestionKeys.QUESTION_DESCRIPTION]
         max_selection_count = question[QuestionKeys.MAX_SELECTION_COUNT]
         min_selection_count = question[QuestionKeys.MIN_SELECTION_COUNT]
-
+        prioritized_choices = question[QuestionKeys.ORDERED_CHOICES]
         if max_selection_count < 1:
             rollback_create_election(election_id, question_id_list, option_id_list)
             raise BadRequest(
                 "You must be able to choose at least one option in every question: max_selection_count < 1")
         try:
-            question_id = db.add_questions(election_id, question_description, min_selection_count, max_selection_count)
+            question_id = db.add_question(election_id, question_description, min_selection_count, max_selection_count,
+                                          prioritized_choices)
         except Exception as e:
             rollback_create_election(election_id, question_id_list, option_id_list)
             raise e
